--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -10,10 +10,8 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <!-- styles -->
-
-
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <main>
