--- a/app/views/clients/show.ejs
+++ b/app/views/clients/show.ejs
@@ -1,3 +1,4 @@
 <% layout('../layout') -%>
 
-<%= client.name %>
+<h1><%= client.name %></h1>
+<h3><%= client.contact %> <a href="mailto:<%= client.email %>"><i class="fa fa-envelope"></i></a></h3>
