--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Steel Trap</title>
+    <title>SteelTrap</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+    <header class="header">
+      <h2 class="site-title">SteelTrap</h2>
+      <span>A <i>personal</i>, personal assistant</span>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="/clients">Clients</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Events</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
     <%- body %>
     </main>
