--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,12 +1,14 @@
 // Colors
 $footer: #222;
 
-$pages: (
-  home: #2980b9,
-  about: #16a085,
-  projects: #e74c3c,//#c0392b,
-  contact: #f1c40f,//#8e44ad,
-);
+$dark: #2c3e50;
+
+$dark-red:#c0392b;
+$red:#e74c3c;
+
+$gray: #7f8c8d;
+
+$dark-blue: #3498db;
 
 $social: (
   delicious: #248cff,
