--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -20,13 +20,16 @@
       <nav class="site-nav">
         <ul>
           <li><a href="/clients">Clients</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/events">Events</a></li>
         </ul>
       </nav>
     </header>
     <main>
     <%- body %>
     </main>
+    <script src="/js/lib/jquery-1.11.0.min.js"></script>
+    <script src="/js/lib/underscore.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
