--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -19,9 +19,9 @@
       <span>A <i>personal</i>, personal assistant</span>
       <nav class="site-nav">
         <ul>
-          <li><a href="/clients">Clients</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/events">Events</a></li>
+          <li><a href="/clients"><i class="fa fa-users"></i>Clients</a></li>
+          <li><a href="/projects"><i class="fa fa-briefcase"></i>Projects</a></li>
+          <li><a href="/events"><i class="fa fa-calendar"></i>Events</a></li>
         </ul>
       </nav>
     </header>
@@ -29,6 +29,8 @@
     <%- body %>
     </main>
     <script src="/js/lib/jquery-1.11.0.min.js"></script>
+    <script src="/js/lib/picker.js"></script>
+    <script src="/js/lib/picker.date.js"></script>
     <script src="/js/lib/underscore.js"></script>
     <script src="/js/script.js"></script>
   </body>
