--- a/app/views/projects/index.ejs
+++ b/app/views/projects/index.ejs
@@ -1,5 +1,6 @@
 <% layout('../layout') -%>
+<a class="btn new-project-btn" href="/projects/new/">Add New Project</a>
+<h2>Projects</h2>
 
-<h2>Current Projects</h2>
-
+<h3>Current Projects</h3>
 <%-partial('project',projects)%>
