--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -10,6 +10,10 @@ $gray: #7f8c8d;
 
 $dark-blue: #3498db;
 
+$orange: #e67e22;
+
+$yellow: #f1c40f;
+
 $social: (
   delicious: #248cff,
   facebook: #3b5998,
