--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -22,6 +22,7 @@
           <li><a href="/clients"><i class="fa fa-users"></i>Clients</a></li>
           <li><a href="/projects"><i class="fa fa-briefcase"></i>Projects</a></li>
           <li><a href="/events"><i class="fa fa-calendar"></i>Events</a></li>
+          <li><a href="/expenses"><i class="fa fa-dollar"></i>Expenses</a></li>
         </ul>
       </nav>
     </header>
