adds responsive client grid

--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+    $VARIABLES
+\*------------------------------------*/
+
 // Colors
 $footer: #222;
 
@@ -26,6 +30,7 @@ $social: (
 
 
 // Grid
-$small: 500px;
-$med: 800px;
+$small: 360px;
+$med: 500px;
+$norm: 960px;
 $wide:1200px;
