--- a/public/scss/components/_base.scss
+++ b/public/scss/components/_base.scss
@@ -9,6 +9,13 @@ html, body {
   }
 }
 
+body {
+  background: #eee;
+  color:#333;
+  font-family: 'Lato', sans-serif;
+}
+
+
 *, *:before, *:after {
   -moz-box-sizing: border-box;
        box-sizing: border-box;
