--- a/app/views/expenses/expense.ejs
+++ b/app/views/expenses/expense.ejs
@@ -1,1 +1,7 @@
-<%= expense.title %>
+<div class="expense-container">
+  <h3><%= expense.title %></h3>
+  <p>
+    <%= expense.date %><br />
+    <%= expense %>
+  </p>
+</div> 
