--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -69,6 +69,10 @@
   margin:0 20px 0 0;
   font-weight: 300;
   line-height: 84px;
+  img {
+    height: 35px;
+    margin-right: 16px;
+  }
 }
 
 .site-nav {
