--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -17,7 +17,7 @@
 
   <body>
     <header class="header">
-      <h2 class="site-title">SteelTrap</h2>
+      <h2 class="site-title"><img src="/img/logo.svg" />SteelTrap</h2>
       <span>A <i>personal</i>, personal assistant</span>
       <nav class="site-nav">
         <ul>
