adds passport login

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -28,7 +28,7 @@
 
   <body>
     <header class="header">
-      <h2 class="site-title"><img src="/img/logo.svg" />SteelTrap</h2>
+      <h2 class="site-title"><a href="/"><img src="/img/logo.svg" />SteelTrap</a></h2>
       <span>A <i>personal</i>, personal assistant</span>
       <nav class="site-nav">
         <ul>
