--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -1,1 +1,7 @@
-YOOO You in now
+<% layout('layout') -%>
+<a href="/logout" class="btn btn-default btn-sm">Logout</a>
+<p>
+  <strong>id</strong>: <%= user._id %><br>
+  <strong>email</strong>: <%= user.local.email %><br>
+  <strong>password</strong>: <%= user.local.password %>
+</p>
