--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -188,7 +188,8 @@ main {
   }
   .client-image {
     position: absolute;
-    width: 100%;
+    max-width: 100%;
+    height: 230px;
     top:0;
     left:0;
     z-index: 10;
