--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -4,7 +4,17 @@
 <% if (message.length > 0) { %>
   <div class="alert alert-danger"><%= message %></div>
 <% } %>
+    <p>Login or Register with:</p>
+
+<% if(!loggedIn()) { %>
+  <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
+  <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+  <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
+  <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
+<% } else { %>
 
 <h2>Dashboard</h2>
 
 <h3>Active</h3>
+
+<% } %>
