--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -5,7 +5,6 @@
   <% if (message.length > 0) { %>
     <div class="alert alert-danger"><%= message %></div>
   <% } %>
-
   <!-- LOGIN FORM -->
   <form action="/login" method="post">
     <div class="form-group">
@@ -19,7 +18,8 @@
 
     <button type="submit" class="btn btn-warning btn-lg">Login</button>
   </form>
-
+  <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
+  <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
   <hr>
 
   <p>Need an account? <a href="/signup">Signup</a></p>
