--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -6,11 +6,29 @@
 <% } %>
 
 <% if(!loggedIn()) { %>
-  <p>Login or Register with:</p>
-  <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
-  <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-  <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-  <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
+<div class="form-login">
+  <h3>Login:</h3>
+    <form action="/login" method="post">
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" name="email">
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input type="password" class="form-control" name="password">
+    </div>
+    <button type="submit" class="btn btn-warning btn-lg">Login</button>
+  </form>
+
+  <p>Login with:</p>
+  <a href="/auth/twitter" class="btn btn-twitter"><span class="fa fa-twitter"></span> Twitter</a>
+  <a href="/auth/google" class="btn btn-google"><span class="fa fa-google-plus"></span> Google+</a>
+
+  <hr />
+  <p>
+    Don't have an account? <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Signup</a>
+  </p>
+</div>
 <% } else { %>
 
 <h2>Dashboard</h2>
