--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -15,6 +15,11 @@
       <label>Password</label>
       <input type="password" class="form-control" name="password">
     </div>
+    <div class="form-group">
+      <label>Confirm Password</label>
+      <input type="password" class="form-control" name="password-confirm">
+    </div>
+
 
     <button type="submit" class="btn btn-warning btn-lg">Login</button>
   </form>
