--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -111,7 +111,7 @@
         padding: 20px 20px 16px;
         border-bottom: 4px dotted $dark;
         &:hover {
-          border-bottom: 4px solid $yellow;
+          border-bottom: 4px solid $link;
           i {
             top:-4px;
           }
@@ -136,6 +136,17 @@ main {
   float: right;
   @include clearfix;
 }
+
+/*-- $HOMEPAGE --*/
+.form-login {
+  background: white;
+  border:solid 1px #eee;
+  @include border-radius(5px);
+  padding: 20px;
+  width: 40%;
+  float: left;
+}
+
 
 
 /*-- $CLIENTS --*/
