adds database connect error

--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -30,7 +30,7 @@
   </p>
 </div>
 <% } else { %>
-
+<a href="/logout" class="btn btn-default btn-sm">Logout</a>
 <h2>Dashboard</h2>
 
 <h3>Active</h3>
